--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,8 +15,8 @@
             <input placeholder="Location" type="text">
             <button type="submit">Search</button>
           </form>
-          <p id="data">data</p>
-          <p id="error">error</p>
+          <p id="data"></p>
+          <p id="error"></p>
 
     </div>
 
